# Sentinel

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: eval.yml  publish.yml
eval/: LEADERBOARD.md  results.json  run_eval.py  score.py  tasks.jsonl
sandbox/: example.txt  hello.txt
sdk/: README.md  pyproject.toml
sdk/sentinel_core/: __init__.py
sdk/sentinel_sdk/: __init__.py  audit.py  builtins.py  client.py  engine.py  models.py  plugins.py  policy.py
sdk/tests/: test_audit_http_sink.py  test_import_alias.py  test_library_engine.py
services/gateway-api/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
services/gateway-api/app/: __init__.py  cli.py  contracts.py  graphql_schema.py  graphql_types.py  llm.py  main.py  mcp_client.py  metrics.py  policy.py  policy_graph.py  redaction.py
services/gateway-api/app/agents/: __init__.py  autogen_runner.py  crewai_runner.py  crewai_tools.py  fsm_runner.py  fsm_types.py  langgraph_runner.py  prompts.py  state.py
services/gateway-api/app/core/: audit.py  policy_engine.py  policy_graph.py
services/gateway-api/app/db/: models.py  queries.py  session.py
services/gateway-api/app/orchestrators/: __init__.py  autogen.py  base.py  crewai.py  fsm_hybrid.py  langgraph.py  registry.py
services/gateway-api/app/tool_backends/: __init__.py  base.py  mcp_http.py  mcp_stdio.py  mock.py  registry.py
services/gateway-api/migrations/: env.py
services/gateway-api/migrations/versions/: 487457f4dea0_baseline.py  7d5a3f6f2c1a_add_mcp_tools.py  9c2c7a33f1f0_add_mcp_servers.py  b0b7f8a83c54_add_approval_status_to_tool_calls.py  c9b9e3a1a2f7_add_tool_call_result_and_approved_by.py
services/gateway-api/tests/: test_policy_and_approvals.py  test_smoke_mcp_tools.py  test_smoke_stdio_tools_list.py
services/mcp-sandbox/: Dockerfile  requirements.txt
services/mcp-sandbox/app/: sandbox.py  server.py  tools_fs.py
services/mcp-sandbox/app/mcp/: __init__.py
services/neo4j/seed/: seed.cypher
services/tool-runner/: .dockerignore  Dockerfile
services/tool-runner/app/: main.py
ui/: Dockerfile  package-lock.json  tsconfig.json
ui/app/api/leaderboard/: route.ts
ui/app/approval/: page.tsx
ui/app/lib/: graphql.ts
(+2 files in other folders)
