[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-sdk"
version = "0.0.1"
description = "Thin client for Sentinel GraphQL API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests"]

[tool.setuptools]
packages = ["sentinel_sdk"]
