[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-core"
version = "0.0.1"
description = "Library-only Sentinel core (policy, orchestration, MCP/tool plugins, audit sinks)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests"]

[tool.setuptools]
packages = ["sentinel_sdk", "sentinel_core"]
